# c-hacks

./: .gitignore  .gitmodules  .indent.pro  .travis.yml  CMakeLists.txt  Makefile  README.md
cmake/: prevent-in-source-builds.cmake  use-ccache.cmake  use-gold-linker.cmake
include/c-hacks/: btree.h  hashtbl-funcs.h  hashtbl.h  leb128.h  linked-hashtbl.h
scripts/: check-coding-style.bash
src/: CMakeLists.txt  btree.c  hashtbl.c  leb128.c  linked-hashtbl.c
tests/: CMakeLists.txt  CUnitTest.h  test-btree.c  test-hashtbl.c  test-leb128.c  test-linked-hashtbl.c
